--- a/src/app/pages/loader/loader.page.html
+++ b/src/app/pages/loader/loader.page.html
@@ -1,9 +1,5 @@
-<ion-header >
-  <ion-toolbar>
-    <ion-title>loader</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  check_box_outline_blank
+<ion-content>
+  <div class="flex-center">
+    <ion-spinner name="crescent" color="success"></ion-spinner>
+  </div>
 </ion-content>
